How to delete a pose library asset? #90844

Closed
opened 2021-08-22 10:40:04 +02:00 by Reiner Prokein · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-21 21:31, hash: 721fad37a1

Short description of error
There seems to be no way to delete a once inserted pose library asset in the asset browser. Pressing the delete or X key does nothing. There is no menu item with a delete entry. Just a clear asset menu item in the right click menu. But this item is greyed out.

Exact steps for others to reproduce the error

  • Create Armature
  • Switch to Pose mode
  • Open Sidebar and create a pose asset in the Animation tab
  • Try to delete this pose asset

howtodelete.blend

howtodelete.jpg

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-21 21:31, hash: `721fad37a1` **Short description of error** There seems to be no way to delete a once inserted pose library asset in the asset browser. Pressing the delete or X key does nothing. There is no menu item with a delete entry. Just a clear asset menu item in the right click menu. But this item is greyed out. **Exact steps for others to reproduce the error** - Create Armature - Switch to Pose mode - Open Sidebar and create a pose asset in the Animation tab - Try to delete this pose asset [howtodelete.blend](https://archive.blender.org/developer/F10303784/howtodelete.blend) ![howtodelete.jpg](https://archive.blender.org/developer/F10303785/howtodelete.jpg)
Author

Added subscriber: @tiles

Added subscriber: @tiles
nationalplumbingservice commented 2021-08-22 12:23:29 +02:00 (Migrated from localhost:3001)

Added subscriber: @nationalplumbingservice

Added subscriber: @nationalplumbingservice
nationalplumbingservice commented 2021-08-22 12:23:29 +02:00 (Migrated from localhost:3001)

This comment was removed by @nationalplumbingservice

*This comment was removed by @nationalplumbingservice*

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.

Added subscriber: @rwman

Added subscriber: @rwman
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Technically you can delete the pose asset by deleting the underlying action. But this is not obvious of course, there should simply be a pendant to Create Pose Asset.

Technically you can delete the pose asset by deleting the underlying action. But this is not obvious of course, there should simply be a pendant to *Create Pose Asset*.
Sybren A. Stüvel was assigned by Julian Eisel 2021-09-16 15:54:07 +02:00

You can now just use the Clear Asset operator in the asset browser's context menu. This'll un-mark the pose as "asset", and thus it won't be saved any more to the blend file. In other words, it'll be handled like any other orphaned data-block.

If you want to un-mark as asset but still keep the data-block around, use the new Clear Asset (Set Fake User) menu option.

You can now just use the *Clear Asset* operator in the asset browser's context menu. This'll un-mark the pose as "asset", and thus it won't be saved any more to the blend file. In other words, it'll be handled like any other orphaned data-block. If you want to un-mark as asset but still keep the data-block around, use the new *Clear Asset (Set Fake User)* menu option.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90844
No description provided.